--- a/index.html
+++ b/index.html
@@ -143,133 +143,161 @@
   <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
   <div class="modal-content" style="padding:50px;">
+
+
+
     <form>
       <div class="checkbox">
-        <label><input type="checkbox" value="Agriculture Engineering">Agriculture Engineering</label>
+        <label><input type="checkbox" value="Agriculture Engineering" onchange="addArrayPost(event)">Agriculture Engineering</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Architecture</label>
+        <label><input type="checkbox" value="Architecture" onchange="addArrayPost(event)">Architecture</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Bachman Hall</label>
+        <label><input type="checkbox" value="Bachman Hall" onchange="addArrayPost(event)">Bachman Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Biomedical Science</label>
+        <label><input type="checkbox" value="Biomedical Science" onchange="addArrayPost(event)">Biomedical Science</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Business Administration Shidler</label>
+        <label><input type="checkbox" value="Business Administration Shidler" onchange="addArrayPost(event)">Business Administration Shidler</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Crawford Hall</label>
+        <label><input type="checkbox" value="Crawford Hall" onchange="addArrayPost(event)">Crawford Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Dean Hall</label>
+        <label><input type="checkbox" value="Dean Hall" onchange="addArrayPost(event)">Dean Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Duke Kahanamoku Pool</label>
+        <label><input type="checkbox" value="Duke Kahanamoku Pool" onchange="addArrayPost(event)">Duke Kahanamoku Pool</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Environmental Protection</label>
+        <label><input type="checkbox" value="Environmental Protection" onchange="addArrayPost(event)">Environmental Protection</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Everly Hall</label>
+        <label><input type="checkbox" value="Everly Hall" onchange="addArrayPost(event)">Everly Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">George Hall</label>
+        <label><input type="checkbox" value="George Hall" onchange="addArrayPost(event)">George Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Gilmore Hall</label>
+        <label><input type="checkbox" value="Gilmore Hall" onchange="addArrayPost(event)">Gilmore Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Hamilton Library</label>
+        <label><input type="checkbox" value="Hamilton Library" onchange="addArrayPost(event)">Hamilton Library</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Hawaii Hall</label>
+        <label><input type="checkbox" value="Hawaii Hall" onchange="addArrayPost(event)">Hawaii Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Korean Studies</label>
+        <label><input type="checkbox" value="Korean Studies" onchange="addArrayPost(event)">Korean Studies</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Hawaii Institute of Geophysics NOAA</label>
+        <label><input type="checkbox" value="Hawaii Institute of Geophysics NOAA" onchange="addArrayPost(event)">Hawaii Institute of Geophysics NOAA</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Hawaii Institute of Geophysics Substations</label>
+        <label><input type="checkbox" value="Hawaii Institute of Geophysics Substations" onchange="addArrayPost(event)">Hawaii Institute of Geophysics Substations</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Health & Physical Education - Klum Gym</label>
+        <label><input type="checkbox" value="Health & Physical Education - Klum Gym" onchange="addArrayPost(event)">Health & Physical Education - Klum Gym</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Health & Physical Education</label>
+        <label><input type="checkbox" value="Health & Physical Education" onchange="addArrayPost(event)">Health & Physical Education</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Keller Hall</label>
+        <label><input type="checkbox" value="Keller Hall" onchange="addArrayPost(event)">Keller Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Law Library</label>
+        <label><input type="checkbox" value="Law Library" onchange="addArrayPost(event)">Law Library</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Law School</label>
+        <label><input type="checkbox" value="Law School" onchange="addArrayPost(event)">Law School</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Les Murakami Stadium</label>
+        <label><input type="checkbox" value="Les Murakami Stadium" onchange="addArrayPost(event)">Les Murakami Stadium</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Marine Science</label>
+        <label><input type="checkbox" value="Marine Science" onchange="addArrayPost(event)">Marine Science</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Miller Hall</label>
+        <label><input type="checkbox" value="Miller Hall" onchange="addArrayPost(event)">Miller Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Moore Hall</label>
+        <label><input type="checkbox" value="Moore Hall" onchange="addArrayPost(event)">Moore Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Mudis Complex</label>
+        <label><input type="checkbox" value="Mudis Complex" onchange="addArrayPost(event)">Mudis Complex</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Pacific Biosciences Research Center</label>
+        <label><input type="checkbox" value="Pacific Biosciences Research Center" onchange="addArrayPost(event)">Pacific Biosciences Research Center</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Physical Science</label>
+        <label><input type="checkbox" value="Physical Science" onchange="addArrayPost(event)">Physical Science</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Pacific Ocean Science and Technology</label>
+        <label><input type="checkbox" value="Pacific Ocean Science and Technology" onchange="addArrayPost(event)">Pacific Ocean Science and Technology</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Queen Liliuokalani Center of Student Services</label>
+        <label><input type="checkbox" value="Queen Liliuokalani Center of Student Services" onchange="addArrayPost(event)">Queen Liliuokalani Center of Student Services</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Quad Chiller Plant</label>
+        <label><input type="checkbox" value="Quad Chiller Plant" onchange="addArrayPost(event)">Quad Chiller Plant</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Sakamaki Hall AC Equipment</label>
+        <label><input type="checkbox" value="Sakamaki Hall AC Equipment" onchange="addArrayPost(event)">Sakamaki Hall AC Equipment</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Sakamaki Hall</label>
+        <label><input type="checkbox" value="Sakamaki Hall" onchange="addArrayPost(event)">Sakamaki Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Multipurpose Building</label>
+        <label><input type="checkbox" value="Multipurpose Building" onchange="addArrayPost(event)">Multipurpose Building</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Saunders  Hall</label>
+        <label><input type="checkbox" value="Saunders Hall" onchange="addArrayPost(event)">Saunders Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Sherman</label>
+        <label><input type="checkbox" value="Sherman" onchange="addArrayPost(event)">Sherman</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Spalding Hall</label>
+        <label><input type="checkbox" value="Spalding Hall" onchange="addArrayPost(event)">Spalding Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">St John Plant Science</label>
+        <label><input type="checkbox" value="St John Plant Science" onchange="addArrayPost(event)">St John Plant Science</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Stan Sheriff Center</label>
+        <label><input type="checkbox" value="Stan Sheriff Center" onchange="addArrayPost(event)">Stan Sheriff Center</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Webster Hall</label>
+        <label><input type="checkbox" value="Webster Hall" onchange="addArrayPost(event)">Webster Hall</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" value="">Wist Hall</label>
+        <label><input type="checkbox" value="Wist Hall" onchange="addArrayPost(event)">Wist Hall</label>
       </div>
+
+      <script>
+        var building = [];
+
+      function addArrayPost(e) {
+          if(e.target.checked) {
+              addArr(e.target);
+          }
+          else {
+              removeArr(e.target);
+          }
+
+          console.log(arr);
+      }
+      var arr = [];
+      function addArr(obj){
+          arr.push(obj.value);
+      }
+      function removeArr(obj) {
+          var index = arr.indexOf(obj.value);
+          if (index > -1) {
+              arr.splice(index, 1);
+          }
+      }
+      </script>
   </div>
   </div>
   </div>
