--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="content">
           <div class="row" style="margin:0">
-            <div class="col-md-6">
+            <div class="col-md-5">
               <div class="card">
                 <div class="card-header">
                   <h5 class="card-category">Power</h5>
@@ -168,7 +168,15 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md=2" style="margin-top: 10px;">
+              <div class="card">
+                <div class="card-header">
+                  <h4 class="card-title" style="text-align: center">Legend</h4>
+                  <img src="https://i.imgur.com/auha9AA.png">
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
               <div class="card">
                 <div class="card-header">
                   <h5 class="card-category">Power</h5>
