--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="public/apple-icon.png">
-  <link rel="icon" type="image/png" href="public/favicon.png">
+  <!-- <link rel="icon" type="image/png" href="public/favicon.png"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Energy Consumption & Trends
@@ -181,7 +181,7 @@
               <div class="card">
                 <div class="card-header">
                   <h5 class="card-category">Power</h5>
-                  <h4 class="card-title">Average CO2 Production</h4>
+                  <h4 class="card-title">Average CO2 Production (kg)</h4>
                   <div class="chart-area">
                     <div class="container">
                       <div class="row">
