--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="apple-touch-icon" sizes="76x76" href="public/apple-icon.png">
-  <!-- <link rel="icon" type="image/png" href="public/favicon.png"> -->
+  <link rel="icon" type="image/png" href="favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Energy Consumption & Trends
